--- a/template.html
+++ b/template.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>KookboekApp</title>
+		<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 	</head>
 	<body> 
 		<form onsubmit=" … ">
