--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
 		<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 	</head>
 	<body> 
-		<form onsubmit=" … ">
+		<form onsubmit=" … "; return false;>
 			<fieldset>
 				<legend>Vul waarden in voor het recept:
 				</legend>
