--- a/template.html
+++ b/template.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>KookboekApp</title>
+		<title>Kookbook App</title>
 		<meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 	</head>
 	<body> 
